examenes/2017Q2 - 2do parcial/Triñanes/firewall.conf
# Generated by iptables-save v1.4.21 on Wed Nov 15 13:31:09 2017
*nat
:PREROUTING ACCEPT [802:52026]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [20:1420]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Wed Nov 15 13:31:09 2017
# Generated by iptables-save v1.4.21 on Wed Nov 15 13:31:09 2017
*filter
:INPUT DROP [11:1948]
:FORWARD DROP [0:0]
:OUTPUT DROP [20:1420]
:L - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.20.8/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -j ACCEPT
-A FORWARD -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.20.8/32 -p tcp -m tcp --sport 22 -j ACCEPT
COMMIT
# Completed on Wed Nov 15 13:31:09 2017
